# canonical-imports

./: .copier-answers.yml  .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  create-release.yml
docs/: index.md
src/canonical_imports/: __main__.py  _core.py  _utils.py
tests/: __init__.py  test_basic.py  test_cli.py  test_imports.py
