[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Frank Hoffmann", email = "15r10nk@polarbit.de"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy"
]
dependencies = []
description = 'directly import everything from where it is defined'
dynamic = ["version"]
keywords = []
license = "MIT"
name = "canonical-imports"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Documentation = "https://github.com/unknown/canonical-imports#readme"
Issues = "https://github.com/unknown/canonical-imports/issues"
Source = "https://github.com/unknown/canonical-imports"

[project.scripts]
canonical-imports="canonical_imports.__main__:main"

[tool.black]
target-version = ["py38"]

[tool.commitizen]
changelog_incremental = true
major_version_zero = true
tag_format = "v$major.$minor.$patch$prerelease"
update_changelog_on_bump = true
version_files = [
  "inline_snapshot/__init__.py:version"
]
version_provider = "poetry"

[tool.coverage.paths]
canonical_imports = ["src/canonical_imports", "*/canonical-imports/src/canonical_imports"]
tests = ["tests", "*/canonical-imports/tests"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "assert False", "raise NotImplemented", "\\.\\.\\."]

[tool.coverage.run]
branch = true
data_file = "$TOP/.coverage"
omit = [
  "src/canonical_imports/__about__.py"
]
parallel = true
source_pkgs = ["canonical_imports", "tests"]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.cov]
dependencies = ["coverage[toml]>=6.5"]
detached = true
scripts.test = [
  "- coverage erase",
  "hatch run all:test-cov -- {args}",
  "- coverage combine",
  "coverage report"
]

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest"
]


[tool.hatch.envs.docs]
dependencies=[
"mkdocs>=1.4.2",
"mkdocs-material[imaging]>=8.5.10",
"mkdocstrings[python-legacy]>=0.19.0",
]
scripts.serve=["mkdocs serve {args}"]


env-vars.TOP = "{root}"
scripts.test = "pytest {args:tests}"
scripts.test-cov = "coverage run -m pytest {args:tests}"

[tool.hatch.version]
path = "src/canonical_imports/__init__.py"
