[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Frank Hoffmann", email = "15r10nk@polarbit.de"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy"
]
dependencies = [
    "asttokens",
    "click",
    "astunparse",
    "rich"
]
description = 'directly import everything from where it is defined'
dynamic = ["version"]
keywords = []
license = "MIT"
name = "canonical-imports"
readme = "README.md"
requires-python = ">=3.8"


[project.scripts]
canonical-imports = "canonical_imports.__main__:main"


[project.urls]
Documentation = "https://github.com/15r10nk/canonical-imports#readme"
Issues = "https://github.com/15r10nk/canonical-imports/issues"
Source = "https://github.com/15r10nk/canonical-imports"

[tool.black]
target-version = ["py38"]

[tool.commitizen]
changelog_incremental = true
major_version_zero = true
tag_format = "v$major.$minor.$patch$prerelease"
update_changelog_on_bump = true
version_files = [
  "src/canonical_imports/__init__.py:version"
]
version_provider = "pep621"

[tool.coverage.paths]
canonical_imports = ["src/canonical_imports", "*/canonical-imports/src/canonical_imports"]
tests = ["tests", "*/canonical-imports/tests"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "assert False", "raise NotImplemented", "\\.\\.\\."]

[tool.coverage.run]
branch = true
data_file = "$TOP/.coverage"
omit = [
  "src/canonical_imports/__about__.py"
]
parallel = true

[tool.hatch.envs.default]
scripts.test = "pytest {args:tests}"
dependencies = [
  "pytest",
  "inline-snapshot"
]

[tool.hatch.envs.all]
dependencies = [
  "coverage[toml]>=6.5",
  "coverage-enable-subprocess",
  "pytest",
  "inline-snapshot"
]
env-vars.TOP = "{root}"
scripts.test-cov = "coverage run -m pytest {args:tests}"

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.cov]
dependencies = ["coverage[toml]>=6.5"]
detached = true
env-vars.TOP = "{root}"
scripts.test = [
  "- coverage erase",
  "hatch run all:test-cov -- {args}",
  "coverage combine",
  "coverage html",
  "coverage report  --fail-under 100 "
]


[tool.hatch.envs.docs]
dependencies = [
  "mkdocs>=1.4.2",
  "mkdocs-material[imaging]>=8.5.10",
  "mkdocstrings>=0.19.0"
]
scripts.serve = ["mkdocs serve {args}"]

[tool.hatch.version]
path = "src/canonical_imports/__init__.py"
